<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="historyViewModel"
            type="com.alibi.triviaapp.viewmodels.HistoryViewModel" />
    </data>

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SummaryFragment">



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/summary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:layout_margin="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hello"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:text="@string/name"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/comma"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15sp"
                            android:text="@string/what_is_the_best_cricketer_in_the_world"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/answer"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/cricketer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:text="@string/cricket_selected"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15sp"
                            android:text="@string/what_are_the_colors_in_the_indian_national_flag"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/answer"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/colors"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:text="@string/colors_checked"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/content"
                    android:layout_marginStart="15dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="15dp">

                    <Button
                        android:id="@+id/finish"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="53dp"
                        android:layout_marginLeft="53dp"
                        android:text="@string/finish"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        android:textColor="@color/colorAccent" />

                    <Button
                        android:id="@+id/history"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="103dp"
                        android:layout_marginLeft="103dp"
                        android:text="@string/history"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>
                </RelativeLayout>
            </ScrollView>
    </RelativeLayout>
</layout>