<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        tools:context=".fragments.NameFragment">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/enter_your_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorSecondary"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/next"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/colorPrimaryText"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"/>

    </RelativeLayout>
</layout>